hphp/hack/test/typecheck/references/refs_in_array/binding_new_element2.php.exp
File "binding_new_element2.php", line 6, characters 12-12:
An expression is expected here. (Parsing[1002])
