hphp/hack/test/typecheck/references/refs_in_array/binding_new_element2.php
<?hh // strict

function test(): void {
  $y = 42;
  $x = array(1);
  $x[1] = &$y;
}
